# simple-chatbot

./: README.md  chainlit.toml  main.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
.chainlit/translations/: bn.json  el-GR.json  en-US.json  fr-FR.json  gu.json  he-IL.json  hi.json  ja.json  kn.json  ml.json  mr.json  nl.json  ta.json  te.json  zh-CN.json
