[project]
name = "day-8b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.6.9",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
    "langchain-google-genai>=2.0.10",
]
